@startuml day01_class_instance_diagram
scale 1

package "com.survivalcoding.day01_class_instance" {

    class Kinoko {
        {static} - int LEVEL
        - String suffix
        - int hp
        - int level

        + void takeDamage(int damage)
        - void die()
    }

    class Slime {
        {static} - int LEVEL

        - String suffix
        - int hp
        - int level

        + void attack(Hero hero)
        + void run()
        ~ void takeDamage(int damage)
    }

    class PoisonSlime {
        {static} - int POISON_COUNT

        - int poisonCount

        + void attack(Hero hero)
        + void run()
        - void poisonAttack(Hero hero)
    }

    class Hero {
        {static} + int DEFAULT_HP

        - String name
        - int hp
        - Sword sword

        {static} + int money

        + void bye()
        - void die()
        + void attack(Kinoko enemy)
        + void run()
        + void sit(int sec)
        + void slip()
        + void sleep()
        + void takeDamage(int damage)

        {static} + void setRandomMoney()
    }

    class SuperHero {
        - boolean isFlying

        + void fly()
        + void land()
        + void attack(Kinoko enemy)
        + void run()
    }

    class Sword {
        - String name
        - int damage
    }

    class Wizard {
        {static} - int DEFAULT_MP

        - String name
        - int hp
        - int mp
        - Wand wand

        + void heal(Hero hero)
    }

    class GreatWizard {
        {static} - int DEFAULT_MP

        + void heal(Hero hero)
        + void superHeal(Hero hero)
    }

    class Wand {
        - String name
        - double power
    }

    class Person {
        - String name
        - int birthYear

        + int getAge(LocalDate date)
    }

    ' Relationship line
    Hero --> Sword : Has-A
    Wizard --> Wand : Has-A

    Hero ..> Kinoko : Uses-A
    Wizard ..> Hero : Uses-A

    SuperHero --|> Hero : Is-A
    GreatWizard --|> Wizard : Is-A
    PoisonSlime --|> Slime : Is-A
}

@enduml